[package]
name = "plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.55.0"
piston_window = "0.131.0"
plotters = "0.3.5"
# plotters-piston = "0.3.0"
plotters-piston = {path = "../plotters-piston"}
systemstat = "0.2.3"
